# anubis

./: .gitignore  Cargo.toml  README.md  TODO  anubis.bat  experiment.ts
.github/workflows/: check.yaml
examples/: Anubis.yaml
frontend/: .eslintrc.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
protos/: common.proto
src/: files.rs  main.rs  mod.rs  models.rs  schema.rs
src/automatrons/: write.rs
src/cli/: install.rs  mod.rs  parse.rs  validate.rs
src/cli/automatrons/: mod.rs
src/cli/common/: mod.rs
src/cli/generate/: command.rs  mod.rs  protobufs.rs
src/cli/init/: mod.rs  setup.rs
src/cli/relics/: anubis_schema.rs  gitignore.rs  mod.rs
src/cli/relics/cicd/: circleci.rs  github_actions.rs  mod.rs
src/cli/relics/frontend/: eslint.rs  frontend_core.rs  i18n.rs  mod.rs  package_json.rs  scss.rs  seo.rs  tsconfig.rs  vite.rs
src/cli/synthetics/: index_html.rs  mod.rs  write.rs
src/relics/: write.rs
src/synthetics/: mod.rs  write.rs
