[package]
name = "anubis"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
cargo-watch = "^8.5.2"
cargo-make = "^0.37.13"
tempfile = "3.10.1"
serde_yaml = "0.9.34"
serde_json = "1.0.120"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
dialoguer = "0.11.0"
json = "0.12.4"
yaml-rust = "0.4.5"
